--- a/.env.local
+++ b/.env.local
@@ -1,4 +1,6 @@
-NODE_ENV=development
+NODE_ENV=production
 PORT=5000
-DATABASE_URL=mongodb://localhost:27017/ph-lib-mng-sys
+DATABASE_URL=mongodb+srv://saiffardin:saiffardin@cluster0.opwzi.mongodb.net/ph-lib-mng-sys
+
+
 
